--- a/PWD/CSS/project(day5onwards)/navbarstyle.css
+++ b/PWD/CSS/project(day5onwards)/navbarstyle.css
@@ -1,6 +1,5 @@
 img{
     width: 150px;
-    margin-right: 300px;
 }
 
 a{
@@ -50,11 +49,26 @@ table{
     background-color: lightgray;
 }
 
+section{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    /* justify-content: space-between; */
+    /* justify-content: space-around; */
+    justify-content: space-evenly;
+
+    align-items: center;
+    /* align-items: flex-start; */
+    /* align-items: flex-end; */
+    /* align-items: baseline; */
+}
+
 section>div{
-    /* border: 2px solid black; */
     background-color: rgb(205, 242, 255);
-    width: 250px;
-    display: inline-block;
+    width: 20%;
+    height: 450px;
+    /* display: inline-block; */
     margin: 10px;
     padding: 5px;
 }
